Force the full width of events on small screens (fixes #248)

--- a/src/stylesheets/components/_table-responsive.scss
+++ b/src/stylesheets/components/_table-responsive.scss
@@ -17,7 +17,7 @@
 
     .day {
       background: white !important;
-      width: 100%;
+      width: 100% !important; // table.is-7days has higher priority than this
     }
     .day:not(.selected) { display: none; }
     .day .label { display: none; }
